--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 <br>
                             </center>
 
-                            <a href="climate/index.html" class="btn btn-info btn btn-primary form-control orange " role="button " target="blank ">Check Now</a>
+                            <a href="https://distracted-jennings-0a9397.netlify.app/" class="btn btn-info btn btn-primary form-control orange " role="button " target="blank ">Check Now</a>
                         </div>
                     </div>
                 </div>
@@ -181,7 +181,20 @@
                         </div>
                     </div>
                 </div>
+                <div class=" col-md-4 col-sm-6 col-xs-12 ">
+                    <div class="panel panel-default ">
+                        <div class="panel-heading or " style="background-color: black;color: orange; ">Drum Kit</div>
+                        <div class="panel-body nacho ">
+                            <center>
+                                <img class="img-responsive " src="re/drum.jpg" height="250px " width="250 ">
+                                <br>
+                            </center>
 
+                            <a href="https://sekhnafisaatiya282.github.io/drum/" class="btn btn-info btn btn-primary form-control orange " role="button " target="blank ">play now</a>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class=" col-md-4 col-sm-6 col-xs-12 ">
                     <div class="panel panel-default ">
                         <div class="panel-heading or " style="background-color: black;color: orange; ">Covid Fighter</div>
